fixing dark mode
some elements needs to be changed to white for dark mode

--- a/RevTech/src/styles.scss
+++ b/RevTech/src/styles.scss
@@ -25,7 +25,7 @@ body {
       background-color: white;
     }
   }
-  #checkout-cart-title, #checkout-cart-total, #checkout-cart-page-title{
+  #checkout-cart-title, #profile-title, #checkout-cart-total, #checkout-cart-page-title{
     color: white;
   }
 }
